@@ -28,6 +28,18 @@ more seamless.
 3. Run `sbt publish-local` to install LMS-Core for use in other projects.
 
 
+### Troubleshooting
+
+If you get the following exception when running `sbt publish-local`: 
+
+```
+java.lang.OutOfMemoryError: PermGen space
+Error during sbt execution: java.lang.OutOfMemoryError: PermGen space
+tsf-444-wpa-1-148:lms noetzli$ export SBT_OPTS=-XX:MaxPermSize=256m
+```
+
+Use `export SBT_OPTS="-XX:MaxPermSize=256m -Xmx2048m"`.
+
 ### License:
 
 Copyright 2010-2014, EPFL. Licensed under the Apache License, Version 2.0: http://www.apache.org/licenses/LICENSE-2.0
